--- a/pom.xml
+++ b/pom.xml
@@ -75,20 +75,11 @@
 		<VERSION_NUMBER>${project.version}</VERSION_NUMBER>
 	</properties>
 
-<!--
-	<distributionManagement>
-		<repository>
-			<id>versionone</id>
-			<name>versionone-releases</name>
-			<url>http://versionone.artifactoryonline.com/versionone/libs-releases-local</url>
-		</repository>
-		<snapshotRepository>
-			<id>versionone</id>
-			<name>libs-snapshots-local</name>
-			<url>http://versionone.artifactoryonline.com/versionone/libs-snapshots-local</url>
-		</snapshotRepository>
-	</distributionManagement>
--->
+	<!-- <distributionManagement> <repository> <id>versionone</id> <name>versionone-releases</name> 
+		<url>http://versionone.artifactoryonline.com/versionone/libs-releases-local</url> 
+		</repository> <snapshotRepository> <id>versionone</id> <name>libs-snapshots-local</name> 
+		<url>http://versionone.artifactoryonline.com/versionone/libs-snapshots-local</url> 
+		</snapshotRepository> </distributionManagement> -->
 
 	<build>
 		<plugins>
@@ -151,15 +142,10 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
-			
-			<!-- 
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-deploy-plugin</artifactId>
-				<version>2.7</version>
-			</plugin>
-			-->
-			
+
+			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-deploy-plugin</artifactId> 
+				<version>2.7</version> </plugin> -->
+
 			<!-- Add javadoc jar -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -175,7 +161,7 @@
 					</execution>
 				</executions>
 			</plugin>
-			
+
 			<!-- Add sources jar -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -191,7 +177,7 @@
 					</execution>
 				</executions>
 			</plugin>
-		
+
 			<!-- Unit test suite -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -204,7 +190,7 @@
 					</includes>
 				</configuration>
 			</plugin>
-			
+
 			<!-- integration test suite -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -220,7 +206,7 @@
 					</execution>
 				</executions>
 			</plugin>
-			
+
 			<!-- Cobertura test coverage -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
@@ -230,45 +216,21 @@
 					<formats>
 						<format>xml</format>
 					</formats>
-					<check/>
+					<check />
 				</configuration>
 			</plugin>
 
 			<!-- Documentation site builder plugin -->
-			<!-- 
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-site-plugin</artifactId>
-				<version>3.4</version>
-				<dependencies>
-					<dependency>
-						<groupId>org.apache.maven.doxia</groupId>
-						<artifactId>doxia-module-markdown</artifactId>
-						<version>1.4</version>
-					</dependency>
-				</dependencies>
-			</plugin>
-			-->
+			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-site-plugin</artifactId> 
+				<version>3.4</version> <dependencies> <dependency> <groupId>org.apache.maven.doxia</groupId> 
+				<artifactId>doxia-module-markdown</artifactId> <version>1.4</version> </dependency> 
+				</dependencies> </plugin> -->
 
-			<!-- 
-			<plugin>
-				<groupId>com.github.github</groupId>
-				<artifactId>site-maven-plugin</artifactId>
-				<version>0.9</version>
-				<configuration>
-					<message>Creating site for ${project.artifactId} ${project.version}</message>
-					<dryRun>false</dryRun>
-				</configuration>
-				<executions>
-					<execution>
-						<goals>
-							<goal>site</goal>
-						</goals>
-						<phase>site</phase>
-					</execution>
-				</executions>
-			</plugin>
-			-->
+			<!-- <plugin> <groupId>com.github.github</groupId> <artifactId>site-maven-plugin</artifactId> 
+				<version>0.9</version> <configuration> <message>Creating site for ${project.artifactId} 
+				${project.version}</message> <dryRun>false</dryRun> </configuration> <executions> 
+				<execution> <goals> <goal>site</goal> </goals> <phase>site</phase> </execution> 
+				</executions> </plugin> -->
 
 			<!-- Write out maven properties so they can be used by Jenkins -->
 			<plugin>
@@ -289,8 +251,8 @@
 					</execution>
 				</executions>
 			</plugin>
-			
-			<!--GPG plug in for maven-->
+
+			<!--GPG plug in for maven -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-gpg-plugin</artifactId>
@@ -349,7 +311,7 @@
 										</goals>
 									</pluginExecutionFilter>
 									<action>
-										<ignore/>
+										<ignore />
 									</action>
 								</pluginExecution>
 							</pluginExecutions>
@@ -358,7 +320,7 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
-		
+
 	</build>
 	<reporting>
 		<plugins>
@@ -391,10 +353,10 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-    		<groupId>org.mockito</groupId>
-    		<artifactId>mockito-core</artifactId>
-    		<version>2.0.5-beta</version>
-    		<scope>test</scope>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>2.0.5-beta</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.hamcrest</groupId>
@@ -414,14 +376,14 @@
 			<version>1.5</version>
 		</dependency>
 		<dependency>
-    		<groupId>org.apache.httpcomponents</groupId>
-    		<artifactId>httpclient</artifactId>
-    		<version>4.4</version>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.4</version>
 		</dependency>
 		<dependency>
-    		<groupId>org.apache.httpcomponents</groupId>
-    		<artifactId>httpclient-win</artifactId>
-    		<version>4.4</version>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient-win</artifactId>
+			<version>4.4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -453,7 +415,6 @@
 			<artifactId>json</artifactId>
 			<version>20141113</version>
 		</dependency>
-		
 	</dependencies>
 
 	<distributionManagement>
