--- a/EnvFile.properties
+++ b/EnvFile.properties
@@ -1,4 +1,5 @@
 V1_INSTANCE_URL=http://localhost/VersionOne
 V1_USERNAME=admin
 V1_PASSWORD=1234
-V1_ACCESS_TOKEN=1.yL3CcovObgbQnmMKP8PKTt3fo7A=
+V1_ACCESS_TOKEN=1.L/HLCae0tjWJdSpWIU3OIB8eBMI=
+USE_OAUTH=false
