--- a/EnvFile.properties
+++ b/EnvFile.properties
@@ -1,5 +1,5 @@
-V1_INSTANCE_URL=http://localhost/VersionOne
+V1_INSTANCE_URL=http://localhost/VersionOneNTLM
 V1_USERNAME=admin
 V1_PASSWORD=1234
-V1_ACCESS_TOKEN=1.L/HLCae0tjWJdSpWIU3OIB8eBMI=
-USE_OAUTH=false
+V1_ACCESS_TOKEN=1.n8cA10u6ABL5piiUpzB7SYlAopc=
+USE_OAUTH=true
