--- a/EnvFile.properties
+++ b/EnvFile.properties
@@ -2,4 +2,4 @@ V1_INSTANCE_URL=http://localhost/VersionOneNTLM
 V1_USERNAME=admin
 V1_PASSWORD=1234
 V1_ACCESS_TOKEN=1.n8cA10u6ABL5piiUpzB7SYlAopc=
-USE_OAUTH=true
+#USE_OAUTH=true
