--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,9 @@
 						<manifest>
 							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
 						</manifest>
+						<manifestEntries>
+              				<Implementation-Build>${buildNumber}</Implementation-Build>
+            			</manifestEntries>
 					</archive>
 				</configuration>
 			</plugin>
